crates/cribo/tests/snapshots/execution_results@init_reexports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/init_reexports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Helped: Formatted: {'name': 'test', 'value': 42, 'processed': True}",
    stderr: "",
}
