crates/cribo/tests/snapshots/execution_results@metaclass_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Metaclass initialized MyObject with tag my_object\nObject created: MyObject(value=initialized)\nObject tag: my_object",
    stderr: "",
}
