crates/cribo/tests/snapshots/execution_results@metaclass_forward_ref_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_forward_ref_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "YAMLObject: YAMLObject(tag=!YAMLObject)\nTag: !YAMLObject\nMetaclass type: <class 'yaml_pkg.meta.YAMLObjectMetaclass'>",
    stderr: "",
}
