crates/cribo/tests/snapshots/execution_results@metaclass_forward_ref_init_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_forward_ref_init_alias/main.py
---
ExecutionResults {
    status: Success,
    stdout: "YO object: YAMLObject(tag=!YAMLObject)\nTag: !YAMLObject",
    stderr: "",
}
