crates/cribo/tests/snapshots/execution_results@metaclass_forward_ref_wildcard.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_forward_ref_wildcard/main.py
---
ExecutionResults {
    status: Success,
    stdout: "WildcardObject: WildcardObject(tag=!WildcardObject)\nTag: !WildcardObject\nMetaclass: <class 'wildcard_pkg.meta.WildcardMetaclass'>",
    stderr: "",
}
