crates/cribo/tests/snapshots/execution_results@metaclass_ordering_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_ordering_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Both metaclass tests passed",
    stderr: "",
}
