crates/cribo/tests/snapshots/execution_results@metaclass_renamed_forward_ref.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_renamed_forward_ref/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Object 1 created: MyObject(base_attr=from base)\nObject 2 created: OtherMyObject(other_attr=from other)\nTest passed!",
    stderr: "",
}
